2001-11-28  Per Abrahamsen  <abraham@dina.kvl.dk>

	* Version 1.99 released.

2001-11-27  Per Abrahamsen  <abraham@dina.kvl.dk>

	* harvesting.C (load_syntax): Make 'cut_delay' take absolute value.
	(operator): Update caller.

	* development.C (tick_daily): Support `cut_stress'.
	* crop_std.C (tick): Update caller.

	* canopy_std.C (CropHeight): Obey 'HvsWStem'.

	* lib/grass2.dai, lib/maize.dai, lib/pea.dai, lib/rye.dai,
	lib/sbarley.dai, lib/srape.dai, lib/sugarbeet.dai, lib/swheat.dai,
	lib/wbarley.dai, lib/wrape.dai, lib/wwheat.dai: Fix LAIDist.

2001-11-19  Per Abrahamsen  <abraham@dina.kvl.dk>

	* lib/log.dai ("Root Density"): New log model.

	* rootdens_G_P.C (set_density): Support MinDens.

	* root_system.C (load_syntax): Added checks.
	* rootdens_G_P.C (Rootdens_G_PSyntax): Added checks.

	* Version 1.98 released.

2001-11-19  Per Abrahamsen  <abraham@dina.kvl.dk>

	* syntax.C (check): Add numeric checks.

	* check_range.C, check_range.h:  Renamed from check_std.
	* Makefile (OTHER, REMOVE): Ditto.

2001-11-17  Per Abrahamsen  <abraham@dina.kvl.dk>

	* syntax.C, syntax.h (non_negative, non_positive, check): Removed.

	* check_std.h, check_std.C (NonPositive, Negative, Positive,
	RangeII, RangeIE, RangeEI, RangeEE, Below, BelowOrEqual, Above,
	AboveOrEqual): New classes. 
	* am.C (AM_Syntax): Use them.
	* adsorption_langmuir.C (AdsorptionLangmuirSyntax): Use them.
	* adsorption_freundlich.C (AdsorptionFreundlichSyntax): Use them.
	* action_tillage.C (ActionSetPorositySyntax): Use them.
	* action_surface.C (ActionSurfaceSyntax): Use them.
	* action_spray.C (ActionSpraySyntax): Use them.
	* action_irrigate.C (load_syntax): Use them.
	* action_heat.C (ActionHeatSyntax): Use them.
	* action_crop.C (check_alist): Use them.
	* crop_simple.C (CropSimpleSyntax): Use them.
	* om.C (load_syntax): Use them.
	* hydraulic_M_C.C (HydraulicM_CSyntax): Use it.
	* hydraulic_B_C.C (HydraulicB_CSyntax): Use it.
	* hydraulic.C (load_syntax): Use them.
